--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>weather-vibe-shifter</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <meta name="description" content="weather vibe" />
+    <meta name="author" content="weather-app" />
     <meta property="og:image" content="/og-image.png" />
+    <link rel="icon"  href="/public/favicon.jpeg" type="image/x-icon" />
+
   </head>
 
   <body>
